corrected fleets gallery overflow bug

--- a/src/styles/FleetsGalleryStyles/_fleetsGallery.scss
+++ b/src/styles/FleetsGalleryStyles/_fleetsGallery.scss
@@ -14,7 +14,7 @@ Gallery Section
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    width: 100vw;
+    // width: 100vw;
 
     img {
       width: 100%;
